Added final tests to shell script.